[package]
name = "x11-tile"
version = "0.1.0"
authors = ["Alastair Daivis <alaroldai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.13"
anyhow = "1.0.30"
# xcb = { path="../rust-xcb", features = ["randr", "thread"] }
euclid = "0.20.11"
syn = "1.0.23"
crossbeam = "0.7.3"
futures = "0.3.5"
bitflags = "1.2.1"

[dependencies.xcb]
features = ["randr", "thread"]
version = "0.9.0"